// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WorkflowQueriesTileInput renders correctly 1`] = `
<div>
  <div
    class="style={
  '*, *::before, *::after': {
    '-moz-animation': 'none !important',
    '-moz-transition': ' none !important',
    animation: 'none !important',
    'caret-color': ' transparent !important',
    transition: ' none !important',
  },
}
"
  >
    <div
      class="style={
  backgroundColor: '#EEEEEE',
  borderBottomColor: '#EEEEEE',
  borderBottomLeftRadius: '8px',
  borderBottomRightRadius: '8px',
  borderBottomStyle: 'solid',
  borderBottomWidth: '2px',
  borderLeftColor: '#EEEEEE',
  borderLeftStyle: 'solid',
  borderLeftWidth: '2px',
  borderRightColor: '#EEEEEE',
  borderRightStyle: 'solid',
  borderRightWidth: '2px',
  borderTopColor: '#EEEEEE',
  borderTopLeftRadius: '8px',
  borderTopRightRadius: '8px',
  borderTopStyle: 'solid',
  borderTopWidth: '2px',
  boxSizing: 'border-box',
  display: 'flex',
  overflow: 'hidden',
  paddingLeft: '0px',
  paddingRight: '0px',
  transitionDuration: '200ms',
  transitionProperty: 'border',
  transitionTimingFunction: 'cubic-bezier(.2, .8, .4, 1)',
  width: '100%',
}
"
      data-baseweb="textarea"
    >
      <div
        class="style={
  backgroundColor: '#EEEEEE',
  color: '#000000',
  display: 'flex',
  fontFamily: 'UberMoveText, system-ui, "Helvetica Neue", Helvetica, Arial, sans-serif',
  fontSize: '16px',
  fontWeight: 'normal',
  lineHeight: '24px',
  transitionDuration: '200ms',
  transitionProperty: 'background-color',
  transitionTimingFunction: 'cubic-bezier(.2, .8, .4, 1)',
  width: '100%',
}
"
        data-baseweb="base-input"
      >
        <textarea
          aria-invalid="false"
          aria-required="false"
          autocomplete="on"
          class="style={
  '::placeholder': { color: '#6B6B6B' },
  backgroundColor: 'transparent',
  borderBottomStyle: 'none',
  borderBottomWidth: 0,
  borderLeftStyle: 'none',
  borderLeftWidth: 0,
  borderRightStyle: 'none',
  borderRightWidth: 0,
  borderTopStyle: 'none',
  borderTopWidth: 0,
  boxSizing: 'border-box',
  caretColor: '#000000',
  color: '#000000',
  cursor: 'text',
  fontFamily: 'UberMoveMono, "Lucida Console", Monaco, monospace',
  fontSize: '12px',
  fontWeight: 'normal',
  lineHeight: '20px',
  margin: '0',
  maxWidth: '100%',
  minWidth: 0,
  outline: 'none',
  paddingBottom: '10px',
  paddingLeft: '14px',
  paddingRight: '14px',
  paddingTop: '10px',
  resize: 'none',
  width: '100%',
}
"
          inputmode="text"
          name=""
          placeholder=""
          rows="3"
          type="textarea"
        />
      </div>
    </div>
  </div>
  <div
    class="style={}
"
  />
</div>
`;

exports[`WorkflowQueriesTileInput renders correctly with a non-empty value 1`] = `
<div>
  <div
    class="style={
  '*, *::before, *::after': {
    '-moz-animation': 'none !important',
    '-moz-transition': ' none !important',
    animation: 'none !important',
    'caret-color': ' transparent !important',
    transition: ' none !important',
  },
}
"
  >
    <div
      class="style={
  backgroundColor: '#EEEEEE',
  borderBottomColor: '#EEEEEE',
  borderBottomLeftRadius: '8px',
  borderBottomRightRadius: '8px',
  borderBottomStyle: 'solid',
  borderBottomWidth: '2px',
  borderLeftColor: '#EEEEEE',
  borderLeftStyle: 'solid',
  borderLeftWidth: '2px',
  borderRightColor: '#EEEEEE',
  borderRightStyle: 'solid',
  borderRightWidth: '2px',
  borderTopColor: '#EEEEEE',
  borderTopLeftRadius: '8px',
  borderTopRightRadius: '8px',
  borderTopStyle: 'solid',
  borderTopWidth: '2px',
  boxSizing: 'border-box',
  display: 'flex',
  overflow: 'hidden',
  paddingLeft: '0px',
  paddingRight: '0px',
  transitionDuration: '200ms',
  transitionProperty: 'border',
  transitionTimingFunction: 'cubic-bezier(.2, .8, .4, 1)',
  width: '100%',
}
"
      data-baseweb="textarea"
    >
      <div
        class="style={
  backgroundColor: '#EEEEEE',
  color: '#000000',
  display: 'flex',
  fontFamily: 'UberMoveText, system-ui, "Helvetica Neue", Helvetica, Arial, sans-serif',
  fontSize: '16px',
  fontWeight: 'normal',
  lineHeight: '24px',
  transitionDuration: '200ms',
  transitionProperty: 'background-color',
  transitionTimingFunction: 'cubic-bezier(.2, .8, .4, 1)',
  width: '100%',
}
"
        data-baseweb="base-input"
      >
        <textarea
          aria-invalid="false"
          aria-required="false"
          autocomplete="on"
          class="style={
  '::placeholder': { color: '#6B6B6B' },
  backgroundColor: 'transparent',
  borderBottomStyle: 'none',
  borderBottomWidth: 0,
  borderLeftStyle: 'none',
  borderLeftWidth: 0,
  borderRightStyle: 'none',
  borderRightWidth: 0,
  borderTopStyle: 'none',
  borderTopWidth: 0,
  boxSizing: 'border-box',
  caretColor: '#000000',
  color: '#000000',
  cursor: 'text',
  fontFamily: 'UberMoveMono, "Lucida Console", Monaco, monospace',
  fontSize: '12px',
  fontWeight: 'normal',
  lineHeight: '20px',
  margin: '0',
  maxWidth: '100%',
  minWidth: 0,
  outline: 'none',
  paddingBottom: '10px',
  paddingLeft: '14px',
  paddingRight: '14px',
  paddingTop: '10px',
  resize: 'none',
  width: '100%',
}
"
          inputmode="text"
          name=""
          placeholder=""
          rows="3"
          type="textarea"
        >
          test value
        </textarea>
      </div>
    </div>
  </div>
  <div
    class="style={}
"
  />
</div>
`;
